# SimpleChess

./: .gitignore  CMakeLists.txt  Makefile  README.md  bitboardTest  gameCLI  settings.gradle.kts  tests.bat  tests.sh
BoardRep/: Types.h  bitboard.h  bitmanip.h  chessParser.h  movegen.h  types.h
BoardRep/tests/: a.out  game.cpp
BoardRepresentation/: bitboard.h  board.h  pieces.h
BoardRepresentation/tests/: .testBoardRepresentation.cpp.un~  game.cpp  testBoardRepresentation.cpp
Tests/: CLITest.cpp  bitboardTest.cpp  game.cpp  parserTest.cpp
UI/: CLI.h  CLITypes.h  ConsoleUI.h
app/: build.gradle.kts
app/src/main/cpp/: app.cpp  app_example.cpp  bitboard.cpp  chessdisplay.cpp  gamemaster.cpp
app/src/main/headers/: CLI.h  app_example.h  bitboard.h  chessdisplay.h  defaults.h  gamemaster.h  terminalchessdisplay.h  unicodepieces.h
app/src/test/cpp/: app_test.cpp  basic_bitboard_test.cpp  playtest.cpp
deprecated/: Makefile
deprecated/BoardRep/: chessParser.h
deprecated/Tests/: bitboardTest.cpp  game.cpp  parserTest.cpp
deprecated/UI/: CLI.h  CLITypes.h
tests/: CLITest.cpp  a.out  bitboardTest.cpp  game.cpp
